--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,6 +2,7 @@ on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
+  workflow_dispatch:
 
 env:
   GAME_EXECUTABLE_NAME: game
@@ -44,7 +45,7 @@ jobs:
 
       - name: Prepare where to zip release
         run: |
-          echo "GAME_EXECUTABLE_ZIP_NAME=game_${{ RUNNER_OS }}.zip" >> $GITHUB_ENV
+          echo "GAME_EXECUTABLE_ZIP_NAME=game_${{ runner.os }}.zip" >> $GITHUB_ENV
 
       - name: Zip release for Windows
         if: ${{ $RUNNER_OS == 'Windows' }}
