Attempt fix to upload the release properly this time.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,5 +66,5 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ env.GAME_EXECUTABLE_NAME }}_${{ runner.os }}.zip
+          file: $${{ github.workspace }}/{{ env.GAME_EXECUTABLE_NAME }}_${{ runner.os }}.zip
           overwrite: true
